@@ -23,6 +23,7 @@ Version 1.4.4 - CVS
   - Custom option page values now repopulate correctly
   - Added "no focus" option for compose page in display preferences (setting
     reply focus to "No focus" also affects composing new messages)
+  - Fix bug when Saving to Draft folder that contains special characters.
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
